Adds image file for bg

--- a/app.scss
+++ b/app.scss
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding:0;
     font-size:1em;
-    background:#111;
+    background:#111 url('img/rc-graph-bg.gif');
     color:#fff;
 }
 
