--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  background: #111;
+  background: #111 url("img/rc-graph-bg.gif");
   color: #fff; }
 
 h1, h2, h3, h4, h5, h6 {
