Updates image bg

--- a/app.css
+++ b/app.css
@@ -12,8 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 #rc-splash {
   position: relative;
   width: 100vw;
-  height: 100vh;
-  background: #111; }
+  height: 100vh; }
 
 #rc-main-header {
   text-align: center;
