--- a/app.css
+++ b/app.css
@@ -48,18 +48,16 @@ h1, h2, h3, h4, h5, h6 {
       height: 100px;
       position: absolute;
       border-radius: 100%;
-      box-shadow: 0 0 54px rgba(0, 0, 0, 0.6); }
+      box-shadow: 0 0 54px rgba(0, 0, 0, 0.6);
+      background: rgba(42, 58, 80, 0.7);
+      box-shadow: inset 0 0 0 10px #FFFFFF; }
       #rc-cube-container .cube .face.a {
-        transform: rotateY(135deg);
-        box-shadow: inset 0 0 0 10px #9D6BFF; }
+        transform: rotateY(135deg); }
       #rc-cube-container .cube .face.b {
-        transform: rotateY(45deg);
-        box-shadow: inset 0 0 0 10px #2083FF; }
+        transform: rotateY(45deg); }
       #rc-cube-container .cube .face.c {
-        transform: rotateY(90deg);
-        box-shadow: inset 0 0 0 10px #3DE98A; }
+        transform: rotateY(90deg); }
       #rc-cube-container .cube .face.d {
-        box-shadow: inset 0 0 0 10px #FF4290;
         z-index: -1; }
 
 @keyframes cubeSpinner {
