--- a/app.scss
+++ b/app.scss
@@ -57,20 +57,18 @@ h1,h2,h3,h4,h5,h6 {
                     position: absolute;
                     border-radius: 100%;
                     box-shadow: 0 0 54px rgba(0,0,0,0.6);
+                    background: rgba(42, 58, 80, 0.7);
+                    box-shadow: inset 0 0 0 10px #FFFFFF;
                     &.a{
                         transform: rotateY(135deg);
-                        box-shadow: inset 0 0 0 10px #9D6BFF;
                     }
                     &.b{
                         transform: rotateY(45deg);
-                        box-shadow: inset 0 0 0 10px #2083FF;
                     }
                     &.c{
                         transform: rotateY(90deg);
-                        box-shadow: inset 0 0 0 10px #3DE98A;
                     }
                     &.d{
-                        box-shadow: inset 0 0 0 10px #FF4290;
                         z-index: -1;
                     }
                 }
