--- a/app.css
+++ b/app.css
@@ -1,12 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=PT+Mono|PT+Sans);
 body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  background: #111 url("img/rc-graph-bg.gif");
-  color: #fff; }
+  background: #2A3A50 url("img/rc-graph-bg.gif");
+  color: #fff;
+  font-family: "PT Sans", sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: monaco;
+  font-family: "PT Mono", monaco, sans-serif;
   font-weight: normal; }
 
 #rc-splash {
@@ -26,7 +28,10 @@ h1, h2, h3, h4, h5, h6 {
   #rc-main-header .title {
     font-size: 3em; }
   #rc-main-header .subtitle {
-    font-size: 1em; }
+    font-weight: lighter;
+    color: #77869A;
+    font-size: 1.1em;
+    font-family: "PT Sans", sans-serif; }
 
 #rc-cube-container {
   perspective: 200px;
