--- a/app.css
+++ b/app.css
@@ -43,9 +43,25 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     transform-style: preserve-3d;
     margin: auto;
+    -webkit-animation-name: cubeSpinner;
+    -moz-animation-name: cubeSpinner;
+    -ms-animation-name: cubeSpinner;
+    -o-animation-name: cubeSpinner;
     animation-name: cubeSpinner;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+    -ms-animation-timing-function: linear;
+    -o-animation-timing-function: linear;
     animation-timing-function: linear;
+    -webkit-animation-duration: 10s;
+    -moz-animation-duration: 10s;
+    -ms-animation-duration: 10s;
+    -o-animation-duration: 10s;
     animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -ms-animation-iteration-count: infinite;
+    -o-animation-iteration-count: infinite;
     animation-iteration-count: infinite; }
     #rc-cube-container .cube .face {
       display: block;
@@ -66,6 +82,11 @@ h1, h2, h3, h4, h5, h6 {
         z-index: -1; }
 
 @keyframes cubeSpinner {
+  from {
+    transform: rotatex(75deg) rotatey(0deg); }
+  to {
+    transform: rotatex(75deg) rotatey(360deg); } }
+@-webkit-keyframes cubeSpinner {
   from {
     transform: rotatex(75deg) rotatey(0deg); }
   to {
