--- a/app.css
+++ b/app.css
@@ -14,7 +14,8 @@ h1, h2, h3, h4, h5, h6 {
 #rc-splash {
   position: relative;
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+  min-height: 740px; }
 
 #rc-main-header {
   text-align: center;
@@ -80,6 +81,38 @@ h1, h2, h3, h4, h5, h6 {
         transform: rotateY(90deg); }
       #rc-cube-container .cube .face.d {
         z-index: -1; }
+
+#rc-splash-nav {
+  text-align: center;
+  position: absolute;
+  bottom: 20%;
+  left: 0;
+  right: 0;
+  font-family: 'PT Mono'; }
+  #rc-splash-nav ul {
+    display: inline-block;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border: solid 2px #445265;
+    border-radius: 4px; }
+    #rc-splash-nav ul li:nth-child(2) {
+      border: solid 2px #445265;
+      border-width: 0 2px; }
+    #rc-splash-nav ul li {
+      cursor: pointer;
+      display: inline-block;
+      padding: 16px;
+      width: 100px;
+      text-align: center;
+      cursor: pointer;
+      -webkit-transition: all 0.15s;
+      -moz-transition: all 0.15s;
+      -ms-transition: all 0.15s;
+      -o-transition: all 0.15s;
+      transition: all 0.15s; }
+    #rc-splash-nav ul li:hover {
+      background: rgba(255, 255, 255, 0.1); }
 
 @keyframes cubeSpinner {
   from {
