--- a/app.css
+++ b/app.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 50%;
   left: 0;
   right: 0;
-  margin-top: -50px; }
+  margin-top: -88px; }
   #rc-main-header .title, #rc-main-header .subtitle {
     margin: 0; }
   #rc-main-header .title {
@@ -37,7 +37,10 @@ h1, h2, h3, h4, h5, h6 {
 #rc-cube-container {
   perspective: 200px;
   perspective-origin: 50% 50px;
-  position: relative; }
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -130px; }
   #rc-cube-container .cube {
     width: 100px;
     height: 100px;
@@ -85,7 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 #rc-splash-nav {
   text-align: center;
   position: absolute;
-  bottom: 20%;
+  bottom: -90px;
   left: 0;
   right: 0;
   font-family: 'PT Mono'; }
@@ -113,6 +116,29 @@ h1, h2, h3, h4, h5, h6 {
       transition: all 0.15s; }
     #rc-splash-nav ul li:hover {
       background: rgba(255, 255, 255, 0.1); }
+
+#rc-splash-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 30px 0; }
+
+.rc-icon-github {
+  display: inline-block;
+  background: url("img/github.png") no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 35px;
+  opacity: 0.5;
+  -webkit-transition: all 0.15s;
+  -moz-transition: all 0.15s;
+  -ms-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  transition: all 0.15s; }
+  .rc-icon-github:hover {
+    opacity: 1; }
 
 @keyframes cubeSpinner {
   from {
