--- a/app.scss
+++ b/app.scss
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {
     position:absolute;
     top: 50%;
     left:0; right:0;
-    margin-top:-50px;
+    margin-top:-88px;
 
     .title, .subtitle{
         margin: 0;
@@ -57,7 +57,10 @@ h1,h2,h3,h4,h5,h6 {
 #rc-cube-container{
     perspective: 200px;
     perspective-origin: 50% 50px;
-    position: relative;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -130px;
     .cube{
         width: 100px;
         height: 100px;
@@ -96,7 +99,7 @@ h1,h2,h3,h4,h5,h6 {
 #rc-splash-nav{
     text-align: center;
     position: absolute;
-    bottom: 20%;
+    bottom: -90px;
     left: 0;
     right: 0;
     font-family: 'PT Mono';
@@ -124,6 +127,27 @@ h1,h2,h3,h4,h5,h6 {
         li:hover{
             background: rgba(255,255,255,0.1);
         }
+    }
+}
+
+#rc-splash-footer{
+    position:absolute;
+    bottom:0;
+    left:0; right:0;
+    text-align:center;
+    padding: 30px 0;
+}
+
+.rc-icon-github{
+    display:inline-block;
+    background: url('img/github.png') no-repeat;
+    background-size:cover;
+    width:35px;
+    height:35px;
+    opacity:0.5;
+    @include multibrowser(transition, all 0.15s);
+    &:hover{
+        opacity:1;
     }
 }
 
