--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,9 +15,14 @@ body{
     margin:0;
     padding:0;
     font-size:1em;
-    background:#2A3A50 url('img/rc-graph-bg.gif');
+    background:#2A3A50 url('img/rc-graph-bg.png');
     color:#fff;
     font-family:$font;
+    width:100vw;
+    height:100vh;
+    min-height:500px;
+    overflow: hidden;
+    @include multibrowser(transition, all 1s);
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -25,11 +30,57 @@ h1,h2,h3,h4,h5,h6 {
     font-weight:normal;
 }
 
+#rc-view{
+    position: relative;
+    height: 100vh;
+    overflow:scroll;
+}
+
+.rc-sheet{
+    background: #fbfbfb;
+    margin: auto;
+    width: 90%;
+    max-width: 650px;
+    min-height:400px;
+    box-shadow: 0 -29px 30px -16px rgba(0,0,0,0.3);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100px;
+    color:#555;
+}
+
+#rc-profile{
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display:flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    .profile-content{
+        display: inline-block;
+        width: 55%;
+        padding:20px 0 20px 20px;
+        h1{ margin:0; }
+    }
+    .profile-pic{
+        display:inline-block;
+        vertical-align:top;
+        width:45%;
+        height:100%;
+        background: #fff url('img/profile-pic.jpg') no-repeat bottom center;
+        background-size: 100% auto;;
+        box-shadow: inset 0px -20px 20px rgba(0,0,0,0.1);
+    }
+}
+
 #rc-splash{
     position:relative;
-    width:100vw;
-    height:100vh;
-    min-height:740px;
+    width:100%;
+    height:100%;
 }
 #rc-main-header{
     text-align:center;
