--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6 {
         bottom: -20px;
         left: -100px;
         right: -100px;
-        @include multibrowser(transform, rotateZ(-74deg));
+        @include multibrowser(transform, rotateZ(-104deg));
     }
 }
 
@@ -78,6 +78,101 @@ h1,h2,h3,h4,h5,h6 {
     top: 100px;
     color:#555;
     font-size:0.9em;
+
+    .content{
+        .header{
+            background: -webkit-linear-gradient(bottom, #eee, #fefefe);
+            padding: 15px;
+            position:relative;
+            display:block;
+        }
+        h1{ margin:0; }
+        .subtitle{
+            color:#888;
+            .hire-me{
+                color:#bbb;
+                font-style:italic;
+            }
+        }
+
+    }
+}
+
+#rc-resources{
+    top: 50%;
+    margin-top: -216px;
+    .search{
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 260px;
+        bottom: 0;
+        background: -webkit-linear-gradient(top, #F7F7F7, #DCDCDC);
+        input{
+            background: #fff;
+            border: 0;
+            border-radius: 50px;
+            width: 90%;
+            margin: auto;
+            display: block;
+            height: 35px;
+            position: absolute;
+            top: 50%;
+            margin-top: -18px;
+            left: 0;
+            right: 0;
+            box-shadow: 0 2px 0 rgba(0,0,0,0.1);
+            padding: 16px;
+            font-size: 1em;
+            font-family: 'PT Mono';
+            color: #777;
+            text-transform: lowercase;
+            outline-width: 0;
+        }
+    }
+    .lists{
+        text-align: center;
+        display: flex;
+        display: -webkit-flex;
+        padding: 0 8px;
+    }
+    .rc-resource-list{
+        list-style-type: none;
+        padding: 20px 7px;
+        margin: 0;
+        display: inline-block;
+        vertical-align: top;
+        width: 33%;
+        li{
+            text-align: left;
+            margin: 5px 0;
+            color: #777;
+            &.title{
+                &.disabled {
+                    opacity: 0.4;
+                }
+                font-family: $headingFont;
+                font-weight: bold;
+                padding-bottom: 15px;
+                border-bottom: dashed 1px #ddd;
+                margin: 0 0 15px!important;
+                text-align: left!important;
+                color: #555!important;
+            }
+            .level{
+                vertical-align:middle; 
+                display:inline-block;
+                width:60px; 
+                height:10px;
+                background:#eee;
+                span{
+                    display:block;
+                    height:100%;
+                    box-shadow: inset -2px 0px 0 rgba(0,0,0,0.1);
+                }
+            }
+        }
+    }
 }
 
 #rc-profile {
@@ -99,22 +194,9 @@ h1,h2,h3,h4,h5,h6 {
         left: 0;
         right: 0;
         bottom: 0;
-        .profile-content{
+        .content{
             display: inline-block;
             width: 60%;
-            h1{ margin:0; }
-            .header{
-                background: -webkit-linear-gradient(bottom, #eee, #fefefe);
-                padding: 15px;
-                position:relative;
-            }
-            .subtitle{
-                color:#888;
-                .hire-me{
-                    color:#bbb;
-                    font-style:italic;
-                }
-            }
             .find-me{
                 margin: 10px 15px 0;
                 font-size: 1em;
@@ -213,7 +295,7 @@ h1,h2,h3,h4,h5,h6 {
     bottom: -90px;
     left: 0;
     right: 0;
-    font-family: 'PT Mono';
+    font-family: $headingFont;
 
     ul{
         display: inline-block;
@@ -280,14 +362,29 @@ h1,h2,h3,h4,h5,h6 {
     position:absolute;
     left:-60px;
     top: 0;
-    bottom:0;
     width: 60px;
+    height:80px;
     display:block;
     background:url('img/back.png') no-repeat center;
     background-size:50%;
     @include multibrowser(transition, all .3s linear);
     &:hover{
         background-position: left center;
+    }
+}
+
+.rc-next{
+    position:absolute;
+    right:-60px;
+    top: 0;
+    width: 60px;
+    height:80px;
+    display:block;
+    background:url('img/next.png') no-repeat center;
+    background-size:50%;
+    @include multibrowser(transition, all .3s linear);
+    &:hover{
+        background-position: right center;
     }
 }
 
